# FGTweak

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json
.github/workflows/: build.yml
include/: PCH.h  PCH_win.h  fg_enable.h  fg_log.h  fg_logutil.h  fg_notification.h  fg_str_util.h  fg_win.h
ini_file/: FGTweak.ini
src/: fg_log.cpp  fg_logutil.cpp  fg_main.cpp  fg_notification.cpp  fg_win.cpp
triplets/: x64-windows-static-md-release.cmake
